# Self-service_fruit_based_vision

./: README.md
HX711驱动程序/: Makefile  new_hx711.c
Thread_project/: Makefile  project
Thread_project/hx711/: hx711_thread.c  hx711_thread.h
Thread_project/main/: main.c  main.h  main_a.h
Thread_project/print_thread1/: print_thread.c  print_thread.h
Thread_project/socker/: post_thread.c  post_thread.h
Thread_project/sound/: syn6288_thread.c  syn6288_thread.h
opencv程序/: CMakeLists.txt  fruit.cpp  project_main.cpp  read.cpp
opencv程序/buid/: CMakeCache.txt  Makefile  cmake_install.cmake  fruit_test
opencv程序/include/: fruit.h
